# mlops-arxiv-classifier

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
arxiv_classifier/: __init__.py  api.py  commands.py
arxiv_classifier/data/: __init__.py  dataset.py  downloader.py  preprocessing.py
arxiv_classifier/models/: __init__.py  baseline.py  distilbert_classifier.py
arxiv_classifier/utils/: export.py  git.py  logger.py  metrics.py  mlflow.py
configs/: config.yaml  inference.yaml
configs/data/: arxiv.yaml
configs/mlflow/: default.yaml
configs/model/: baseline.yaml  distilbert.yaml
configs/training/: default.yaml
scripts/: convert_to_onnx.sh  download_artifacts.sh  setup_dvc.sh  start_api.sh
